# mypy_starter

./: .flake8  README.md  mypy.ini  pyproject.toml
src/: sample1.py  sample4
src/sample/: sample.py  sample_config.py
src/utils/: sample2.py  sample3.py
tests/: test.py
