[project]
name = "mypy-starter"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "stgkrt", email = "taro.stst@gmail.com" }
]
dependencies = [
    "numpy>=1.24.4",
    "pandas>=2.0.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
hello = "mypy_starter:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "utils.*"
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[tool.black]
line-length = 120 
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 120

[tool.flake8]
max-line-length = 120
extend-ignore = "E203, W503"
